--- a/src/app/components/user-settings/user-settings.component.html
+++ b/src/app/components/user-settings/user-settings.component.html
@@ -15,7 +15,7 @@
   <div class='user-profile-element-container mat-typography'>
       <label class='mat-typography'>Email</label>
       {{userData?.email}}
-      <mat-icon (click)='openUpdateFieldDialog("email","email")' class='edit-icon'   svgIcon="update-icon" ></mat-icon>
+      <!-- <mat-icon (click)='openUpdateFieldDialog("email","email")' class='edit-icon'   svgIcon="update-icon" ></mat-icon> -->
   </div>
   <div class='user-profile-element-container mat-typography'>
       <label class='mat-typography'>Country</label>
