reparing multiple bugs

--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -21,10 +21,7 @@
         <span class='idea-description'>You have a great idea, and you would be glad to find a pearson that help you accomplish it?    </span>
     </div>
     <div class='idea-image-container'>
-        <div class='idea-image'>
-
-         </div>
-          
+        <div class='idea-image'></div>
     </div>
   </div>
 
@@ -42,7 +39,7 @@
         </div>
         <div class='worker-content-container'>
             <mat-icon class='icon'   svgIcon="worker-icon"></mat-icon>
-            <span class='worker-description'>Or maybe you are a talented programmer, photographer or designer that is loogin for job?     </span>
+            <span class='worker-description'>Or maybe you are a talented programmer, photographer or designer that is looking for job?     </span>
         </div>
     </div>
     <div class='scroller-container'>
@@ -51,9 +48,6 @@
         </section>
     </div>
   </div>
-
-
-
 
     <div id='team-section' class='team-container'>
         <div class='team-content-container' >
@@ -64,7 +58,6 @@
 
         <div class='team-image-container'>
             <div class='team-image'>
-      
             </div>
               
         </div>
