--- a/src/app/components/home-page/home-page.component.scss
+++ b/src/app/components/home-page/home-page.component.scss
@@ -229,7 +229,7 @@
         margin-top: 40px;
         width: 30px;
         height: 30px;
-        margin-right: 10px;
+        margin-left: 10px;
         cursor:pointer;
         circle{
             fill:red;
