--- a/src/app/components/project-manage/update-project-field-dialog.component.html
+++ b/src/app/components/project-manage/update-project-field-dialog.component.html
@@ -31,7 +31,7 @@
         </div>
         <div *ngSwitchCase="'deadline'">
             <mat-form-field  >
-                    <input matInput type='date' [(ngModel)]="fieldValue" [matDatepicker]="picker" placeholder="Choose a deadline">
+                    <input matInput [min]="minDate"   [(ngModel)]="fieldValue" [matDatepicker]="picker" placeholder="Choose a deadline">
                     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                     <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
