--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -15,13 +15,13 @@ mat-icon{
     }
     .search-field{
         width: 258px;
-        padding-left: 20px;
     }
     .status-field{
         width: 100%;        
     }
     .filters-card{
         padding-bottom: 0px !important; 
+        text-align: center !important;
     }
     
 }
@@ -51,6 +51,7 @@ mat-icon{
 .content-container{
     display:flex;
     flex-direction: column;
+    width:60%;
     flex-grow: 0.7;
     min-height:calc(100vh - 300px);
     .sort-container{
@@ -68,13 +69,14 @@ mat-icon{
     display:flex;
     text-align:center;
     min-height: 200px;
+    max-height:200px;
     justify-content: flex-start;
 }
 
 .left-column-container{
     display:flex;
     padding:15px;
-    width:20%;
+    width:250px;
     justify-content: center;
     align-items: center;
 }
@@ -87,12 +89,15 @@ mat-icon{
         font-weight: bold;
     }
     .project-title{
+        line-height: 87%;
         font-size:1.5em;
+        text-align: left;
         align-self:flex-start;
-        margin-bottom:auto;
+       
         padding:10px;
-        margin-bottom: 0px;
+        margin-bottom: 3px;
         padding-bottom: 0px;
+        
     }
     .project-deadline{
         font-size:1em;
@@ -102,16 +107,23 @@ mat-icon{
         padding-bottom: 0px;
     }
     .project-description{
+        max-height: 63px;
         align-self: flex-start;
-        margin-top:auto;
-        margin-bottom:auto;
         text-align: left;
+        overflow: hidden;
         padding:10px;
         padding-top:0px;
+        padding-bottom:0px;
         margin-top:0px;
         margin-bottom:0px;
-        span{
-            text-align: left;
+        display: flex;
+        min-height: 63px;
+        justify-content: center;
+        align-items: center;
+        p{
+            margin-bottom: 0px;
+            margin-top: 0px;
+            max-height: 63px;
         }
     }
     .project-budget{
