--- a/src/app/components/teams/teams.component.html
+++ b/src/app/components/teams/teams.component.html
@@ -33,12 +33,16 @@
              
             </div>  
             <div class=team-content-container >
-                <h2  class='team-name'> <a [routerLink]="['/app/team-profile/'+team._id]">{{team.name}}</a></h2>
-                <span class='project-deadline'>
-                  <label>Registred:</label>
-                  {{team?.registredDiff}}
-                </span>
-              <span>
+              <h2 class='team-name'> <a [routerLink]="['/app/team-profile/'+team._id]">{{team.name}}</a></h2>
+              <span class='team-registred'>
+                <label>Registred:</label>
+                {{team?.registredDiff}}
+              </span>
+              <span class='team-registred'>
+                <label>Members:</label>
+                {{team?.membersId.length+1}}
+              </span>
+              <span class='team-description'>
                   {{team.description}}
               </span>
             </div>
