--- a/src/app/components/user-settings/user-settings.component.html
+++ b/src/app/components/user-settings/user-settings.component.html
@@ -12,11 +12,7 @@
       {{userData?.lName}}
       <mat-icon (click)='openUpdateFieldDialog("last name","lName")' class='edit-icon'    svgIcon="update-icon"  ></mat-icon>
   </div>
-  <div class='user-profile-element-container mat-typography'>
-      <label class='mat-typography'>Email</label>
-      {{userData?.email}}
-      <!-- <mat-icon (click)='openUpdateFieldDialog("email","email")' class='edit-icon'   svgIcon="update-icon" ></mat-icon> -->
-  </div>
+
   <div class='user-profile-element-container mat-typography'>
       <label class='mat-typography'>Country</label>
       {{userData?.country}}
@@ -33,17 +29,26 @@
       <mat-icon (click)='openUpdateFieldDialog("birthday","bDay")' class='edit-icon'   svgIcon="update-icon" ></mat-icon>
   </div>
   <div class='user-profile-element-container mat-typography'>
+    <label class='mat-typography'>Description</label>
+    {{descriptionShort}}
+    <mat-icon (click)='openUpdateFieldDialog("description","description")' class='edit-icon'   svgIcon="update-icon" ></mat-icon>
+</div>
+  <div class='user-profile-element-container mat-typography'>
       <label class='tech-label mat-typography'>Technologies</label>
       <mat-icon (click)='openUpdateFieldDialog("technologies","technologies")'  class='edit-icon'   svgIcon="update-icon" ></mat-icon>
       <div class='chip-list-container'>
         <mat-chip-list>
-        <mat-chip  style='font-size:102%' *ngFor='let tech of userData?.technologies'>{{tech}}</mat-chip>
+        <mat-chip class='chip' color='primary' selected="true" *ngFor='let tech of userData?.technologies'>{{tech}}</mat-chip>
         
         </mat-chip-list>
        
       </div>
       
   </div>
+  <div class='user-profile-element-container mat-typography'>
+    <label class='mat-typography'>Email</label>
+    {{userData?.email}}
+</div>
   <div class='user-profile-element-container mat-typography'>
     <label  class='mat-typography'>Visable:</label>
     <mat-slide-toggle color=primary  class="mat-typography" [checked]="visabilityState" (click)="changeVisability()" >{{visabilityLabel}}</mat-slide-toggle>
