--- a/src/app/components/project-manage/update-project-field-dialog.component.html
+++ b/src/app/components/project-manage/update-project-field-dialog.component.html
@@ -1,5 +1,5 @@
 <div class='content-wrapper'>
-    <h1 mat-dialog-title>Updating team {{fieldName}}</h1>
+    <h1 mat-dialog-title>Updating project {{fieldName}}</h1>
     <div mat-dialog-content [ngSwitch]="fieldName">
         
         <div *ngSwitchCase="'title'">
