--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -29,6 +29,10 @@ mat-icon{
     justify-content: center !important;
 }
 
+.mat-form-field-infix {
+    width: 200px !important;
+}
+
 
 .main-container{
     display:flex;
