--- a/src/app/components/team-profile/team-profile.component.html
+++ b/src/app/components/team-profile/team-profile.component.html
@@ -18,7 +18,7 @@
 <mat-card>
     <div class='project-card-content'>
         <h4>Number of members:</h4>
-        <span >{{team?.membersId.length}}</span>
+        <span >{{team?.membersId.length+1}}</span>
     </div>
 </mat-card>
 <mat-card>
